--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,14 @@ dependencies:
   flutter_bloc: ^9.0.0
   get_it: ^8.0.3
   shimmer: ^3.0.0
+  bloc_test: ^10.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  mocktail: ^1.0.4
+
 flutter:
 
   uses-material-design: true
