--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_it: ^8.0.3
   shimmer: ^3.0.0
   bloc_test: ^10.0.0
+  flutter_svg: ^2.0.17
 
 dev_dependencies:
   flutter_test:
