--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^2.0.17
   sqflite: ^2.4.1
   path: ^1.9.0
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
