--- a/.github/workflows/homolog.yaml
+++ b/.github/workflows/homolog.yaml
@@ -11,7 +11,7 @@ jobs:
     with:
       flutter_channel: 'stable'
       flutter_version: '3.24.4'
-      min_coverage: 0 #75
+      min_coverage: 70
     # secrets:
     #   ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
