--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -11,7 +11,7 @@ jobs:
     with:
       flutter_channel: 'stable'
       flutter_version: '3.24.4'
-      min_coverage: 0 #60 
+      min_coverage: 70 
       runs_on: ubuntu-latest  # Adicione esta linha para passar o parâmetro runs_on
 
   verify-semantics-pull-request:
