feat: add icon in app and fix bug keyboard

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
 
     <application
-        android:label="taski"
+        android:label="Taski"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
