--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,17 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  mocktail: ^1.0.4
+  mocktail: ^1.0.4  
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/task_icon.png"
+
 
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/images/
     - assets/fonts/
