test: create integration-test to feature create task

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,16 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
+    sdk: flutter 
+  integration_test:
     sdk: flutter
   flutter_lints: ^4.0.0
   mocktail: ^1.0.4  
   flutter_launcher_icons: ^0.13.1
+  sqflite_common_ffi: ^2.3.2
+
+
+
 
 flutter_launcher_icons:
   android: true
@@ -39,6 +45,7 @@ flutter_launcher_icons:
 flutter:
   uses-material-design: true
   assets:
+    - test/integration_test/
     - assets/images/
     - assets/fonts/
 
