--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
     sdk: flutter 
   integration_test:
     sdk: flutter
+  custom_lint: ^0.7.0
   flutter_lints: ^4.0.0
   mocktail: ^1.0.4  
   flutter_launcher_icons: ^0.13.1
