chore: run dart format

--- a/.github/workflows/flutter_package.yaml
+++ b/.github/workflows/flutter_package.yaml
@@ -64,7 +64,7 @@ jobs:
         run: dart format --set-exit-if-changed lib test
       
       - name: 🕵️ Analyze
-        run: flutter analyze lib test
+        run: flutter analyze lib test && dart run custom_lint    
 
       - name: 🧪 Run Tests
         run: flutter test --coverage --update-goldens
