--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,14 +24,18 @@ dependencies:
   path: ^1.9.0
 
 dev_dependencies:
+  my_custom_lints:
+    git:
+      url: https://github.com/WemersonDamasceno/my_custom_lints.git
+      ref: main
   flutter_test:
     sdk: flutter 
   integration_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
   mocktail: ^1.0.4  
   flutter_launcher_icons: ^0.13.1
   sqflite_common_ffi: ^2.3.2
+
 
 
 
