--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,14 @@ dependencies:
   equatable: ^2.0.7
   flutter_bloc: ^9.0.0
   get_it: ^8.0.3
-  shimmer: ^3.0.0
   bloc_test: ^10.0.0
   flutter_svg: ^2.0.17
   sqflite: ^2.4.1
   path: ^1.9.0
+  nova_design_system:
+    git:
+      url: https://github.com/WemersonDamasceno/nova_design_system.git
+      ref: main
 
 dev_dependencies:
   my_custom_lints:
@@ -51,16 +54,5 @@ flutter:
   assets:
     - test/integration_test/
     - assets/images/
-    - assets/fonts/
-
-  fonts:
-    - family: Urbanist
-      fonts:
-        - asset: assets/fonts/Urbanist-Regular.ttf
-          weight: 500
-        - asset: assets/fonts/Urbanist-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/Urbanist-Bold.ttf
-          weight: 700
     
       
