--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: taski
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -10,14 +10,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   bloc: ^9.0.0
   equatable: ^2.0.7
   flutter_bloc: ^9.0.0
   get_it: ^8.0.3
-  bloc_test: ^10.0.0
   flutter_svg: ^2.0.17
   sqflite: ^2.4.1
   path: ^1.9.0
@@ -36,11 +34,9 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   mocktail: ^1.0.4  
+  bloc_test: ^10.0.0
   flutter_launcher_icons: ^0.13.1
   sqflite_common_ffi: ^2.3.2
-
-
-
 
 
 flutter_launcher_icons:
