--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   flutter_svg: ^2.0.17
   sqflite: ^2.4.1
   path: ^1.9.0
+  internet_connection_checker: ^3.0.1
+
   nova_design_system:
     git:
       url: https://github.com/WemersonDamasceno/nova_design_system.git
