--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,7 +1,10 @@
-# Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+# Definir a versão mínima do iOS
+platform :ios, '12.0'
 
-# CocoaPods analytics sends network stats synchronously affecting flutter build latency.
+# Evitar problemas de entrada e saída no CocoaPods
+install! 'cocoapods', :disable_input_output_paths => true
+
+# CocoaPods analytics envia estatísticas de rede de forma síncrona, afetando a latência da build do Flutter
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
 project 'Runner', {
@@ -32,6 +35,7 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+
   target 'RunnerTests' do
     inherit! :search_paths
   end
