feat: add listener with connection status

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 
     <!-- INTERNET PERMISSION -->
     <uses-permission android:name="android.permission.INTERNET"/>
+        <!-- STATE NETWORK PERMISSION -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
     <application
